--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-opencv-python
-pandas
-numpy
-scipy
+opencv-python==4.5.5.64
+pandas==2.0.3
+numpy==1.20.3
+scipy==1.10.1
 alphashape
 tqdm
-mediapipe
+mediapipe==0.10.2
 h5py
 matplotlib
 panel
 pillow
 heartpy
+protobuf==3.20
