--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-opencv-python==4.5.5.64
-pandas==2.0.3
-numpy==1.24
-scipy==1.10.1
+opencv-python
+pandas
+scipy
 alphashape
 tqdm
-mediapipe
-h5py
+mediapipe==0.10.8
 matplotlib
 panel
 pillow
 heartpy
-protobuf==3.20.2
 ipykernel
